# dead-reckoning

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
asset_manager/: CMakeLists.txt  assets_manager.cpp  assets_manager.hpp
assets/images/: block 2.psd  finished sprite.psd  mini sprite.psd  running1.psd
assets/shaders/: shaders.frag  shaders.vert
assets_manager/: CMakeLists.txt  assets_manager.cpp  assets_manager.hpp
assets_manager/include/: assets_manager.hpp  image_description.hpp
assets_manager/source/: assets_manager.cpp
character/: CMakeLists.txt  character.cpp  character.hpp
cmake/: glslang.cmake  shaderc.cmake  vulkan_headers.cmake  vulkan_loader.cmake  vulkan_validation_layers.cmake
configure/: CMakeLists.txt
configure/include/: config.hpp  config.hpp.in
controller/: CMakeLists.txt
controller/include/: controller.hpp
controller/source/: controller.cpp
game/: CMakeLists.txt  game.cpp  game.hpp
game/include/: game.hpp
game/source/: game.cpp
game_object/: CMakeLists.txt  game_object.hpp
game_object/include/: game_object.hpp  mesh_manager.hpp  vertex.hpp
game_object/source/: game_object.cpp
game_objects/: circle.cpp  circle.hpp
renderer/: CMakeLists.txt  renderer.cpp  renderer.hpp  renderer_helper.hpp
renderer/include/: debug_helper.hpp  queue_family_indices.hpp  renderer.hpp  swap_chain_support_details.hpp  uniform_buffer.hpp
renderer/source/: renderer.cpp
texture_manager/: CMakeLists.txt  texture_manager.cpp  texture_manager.hpp
utils/: CMakeLists.txt  utils.cpp  utils.hpp
utils/include/: utils.hpp
utils/source/: utils.cpp
verlet_engine/: CMakeLists.txt  verlet.cpp  verlet.hpp
window/: CMakeLists.txt  window.cpp  window.hpp  window_details.hpp
window_manager/: CMakeLists.txt  window_details.hpp  window_manager.cpp  window_manager.hpp
window_manager/include/: window_details.hpp  window_manager.hpp
window_manager/source/: window_manager.cpp
